Loader for the CWE Catalog (.xml.zip) Make format-detection more less-nested. - Try'em all in-order until we find a match Wire up endpoints for /api/v1/weakness and /api/v1/weakness/{id}
todo: an importer
