# openapi.yaml
@@ -1465,6 +1465,69 @@ paths:
                 $ref: '#/components/schemas/VulnerabilityDetails'
         '404':
           description: Specified vulnerability not found
+  /api/v1/weakness:
+    get:
+      tags:
+      - weakness
+      operationId: listWeaknesses
+      parameters:
+      - name: q
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: sort
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: offset
+        in: query
+        description: |-
+          The first item to return, skipping all that come before it.
+
+          NOTE: The order of items is defined by the API being called.
+        required: false
+        schema:
+          type: integer
+          format: int64
+          minimum: 0
+      - name: limit
+        in: query
+        description: |-
+          The maximum number of entries to return.
+
+          Zero means: no limit
+        required: false
+        schema:
+          type: integer
+          format: int64
+          minimum: 0
+      responses:
+        '200':
+          description: Matching weaknesses
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedLicenseSummary'
+  /api/v1/weakness/{id}:
+    get:
+      tags:
+      - weakness
+      operationId: getWeakness
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: The weakness
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LicenseSummary'
 components:
   schemas:
     AdvisoryDetails:
@@ -2166,6 +2229,23 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/VulnerabilitySummary'
+          description: Returned items
+        total:
+          type: integer
+          format: int64
+          description: Total number of items found
+          minimum: 0
+    PaginatedWeaknessSummary:
+      type: object
+      description: Paginated returned items
+      required:
+      - items
+      - total
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/WeaknessSummary'
           description: Returned items
         total:
           type: integer
@@ -2896,6 +2976,73 @@ components:
             allOf:
             - $ref: '#/components/schemas/Severity'
             nullable: true
+    WeaknessDetails:
+      allOf:
+      - $ref: '#/components/schemas/WeaknessHead'
+      - type: object
+        properties:
+          can_also_be:
+            type: array
+            items:
+              type: string
+            nullable: true
+          can_follow:
+            type: array
+            items:
+              type: string
+            nullable: true
+          can_precede:
+            type: array
+            items:
+              type: string
+            nullable: true
+          child_of:
+            type: array
+            items:
+              type: string
+            nullable: true
+          extended_description:
+            type: string
+            nullable: true
+          parent_of:
+            type: array
+            items:
+              type: string
+            nullable: true
+          peer_of:
+            type: array
+            items:
+              type: string
+            nullable: true
+          required_by:
+            type: array
+            items:
+              type: string
+            nullable: true
+          requires:
+            type: array
+            items:
+              type: string
+            nullable: true
+          starts_with:
+            type: array
+            items:
+              type: string
+            nullable: true
+    WeaknessHead:
+      type: object
+      required:
+      - id
+      properties:
+        description:
+          type: string
+          nullable: true
+        id:
+          type: string
+    WeaknessSummary:
+      allOf:
+      - $ref: '#/components/schemas/WeaknessHead'
+      - type: object
     Which:
       type: string
       enum:
